--- a/docker/infra-compose.yml
+++ b/docker/infra-compose.yml
@@ -27,6 +27,8 @@ services:
         "--appendonly", "yes", # AOF (AppendOnlyFile) 영속성 기능 켜기
         "--save", "",
         "--latency-monitor-threshold", "100", # 특정 command 가 지정 시간(ms) 이상 걸리면 monitor 기록
+        "--maxmemory", "2gb", # 최대 메모리 2GB (시스템 메모리에 따라 조정 필요)
+        "--maxmemory-policy", "volatile-lru", # TTL이 있는 키 중 최근 사용 안 된 키 삭제
       ]
     healthcheck:
       test: ["CMD", "redis-cli", "-p", "6379", "PING"]
@@ -52,6 +54,8 @@ services:
         "--replicaof", "redis-master", "6379", # replica 모드로 실행 + 서비스 명, 서비스 포트
         "--replica-read-only", "yes", # 읽기 전용으로 설정
         "--latency-monitor-threshold", "100",
+        "--maxmemory", "2gb", # 최대 메모리 2GB (시스템 메모리에 따라 조정 필요)
+        "--maxmemory-policy", "volatile-lru", # TTL이 있는 키 중 최근 사용 안 된 키 삭제
       ]
     healthcheck:
       test: ["CMD", "redis-cli", "-p", "6379", "PING"]
