redis timeout 명시 설정

--- a/modules/redis/src/main/resources/redis.yml
+++ b/modules/redis/src/main/resources/redis.yml
@@ -3,6 +3,7 @@ spring:
     redis:
       repositories:
         enabled: false
+      timeout: 3000 # Lettuce commandTimeout (3초) - Release It! 원칙: 모든 Integration Point에 타임아웃 설정
 
 datasource:
   redis:
