--- a/apps/commerce-api/src/main/resources/application.yml
+++ b/apps/commerce-api/src/main/resources/application.yml
@@ -62,7 +62,7 @@ resilience4j:
         automaticTransitionFromOpenToHalfOpenEnabled: true # 자동으로 Half-Open으로 전환
         waitDurationInOpenState: 10s # Open 상태 유지 시간 (10초 후 Half-Open으로 전환)
         failureRateThreshold: 50 # 실패율 임계값 (50% 이상 실패 시 Open)
-        slowCallRateThreshold: 100 # 느린 호출 비율 임계값 (100% - 모든 호출이 느림)
+        slowCallRateThreshold: 50 # 느린 호출 비율 임계값 (50% 이상 느리면 Open) - Release It! 권장: 50~70%
         slowCallDurationThreshold: 3s # 느린 호출 기준 시간 (3초 이상)
         recordExceptions:
           - feign.FeignException
@@ -75,17 +75,21 @@ resilience4j:
         minimumNumberOfCalls: 5
         waitDurationInOpenState: 10s
         failureRateThreshold: 50
+        slowCallRateThreshold: 50 # 느린 호출 비율 임계값 (50% 이상 느리면 Open) - Release It! 권장: 50~70%
         # 실패율 임계값 50%: 최소 5번 호출 중 3번 이상 실패 시 Open 상태로 전환
         # 이 설정은 Retry와 함께 사용될 때 적절한 균형을 제공합니다:
         # - 너무 낮으면 (예: 30%): 정상적인 일시적 오류에도 Fallback이 과도하게 호출됨
         # - 너무 높으면 (예: 70%): 실제 장애 상황에서 Fallback이 늦게 활성화됨
         # 50%는 일반적인 마이크로서비스 환경에서 권장되는 값입니다
+        # 느린 호출 비율 50%: 최소 5번 호출 중 3번 이상이 3초 이상 걸리면 Open 상태로 전환
+        # Release It! 권장: "실패가 아니더라도 너무 느린 응답"도 장애의 징후이므로 감시
       paymentGatewaySchedulerClient:
         baseConfig: default
         slidingWindowSize: 10
         minimumNumberOfCalls: 5
         waitDurationInOpenState: 10s
         failureRateThreshold: 50
+        slowCallRateThreshold: 50 # 느린 호출 비율 임계값 (50% 이상 느리면 Open) - Release It! 권장: 50~70%
   retry:
     configs:
       default:
