--- a/apps/commerce-api/src/main/resources/application.yml
+++ b/apps/commerce-api/src/main/resources/application.yml
@@ -56,14 +56,14 @@ resilience4j:
     configs:
       default:
         registerHealthIndicator: true
-        slidingWindowSize: 10 # 슬라이딩 윈도우 크기
+        slidingWindowSize: 20 # 슬라이딩 윈도우 크기 (Building Resilient Distributed Systems 권장: 20~50)
         minimumNumberOfCalls: 5 # 최소 호출 횟수 (이 횟수 이상 호출되어야 통계 수집)
         permittedNumberOfCallsInHalfOpenState: 3 # Half-Open 상태에서 허용되는 호출 수
         automaticTransitionFromOpenToHalfOpenEnabled: true # 자동으로 Half-Open으로 전환
         waitDurationInOpenState: 10s # Open 상태 유지 시간 (10초 후 Half-Open으로 전환)
         failureRateThreshold: 50 # 실패율 임계값 (50% 이상 실패 시 Open)
         slowCallRateThreshold: 50 # 느린 호출 비율 임계값 (50% 이상 느리면 Open) - Release It! 권장: 50~70%
-        slowCallDurationThreshold: 3s # 느린 호출 기준 시간 (3초 이상)
+        slowCallDurationThreshold: 2s # 느린 호출 기준 시간 (2초 이상) - Building Resilient Distributed Systems 권장: 2s
         recordExceptions:
           - feign.FeignException
           - java.net.SocketTimeoutException
@@ -71,11 +71,12 @@ resilience4j:
     instances:
       paymentGatewayClient:
         baseConfig: default
-        slidingWindowSize: 10
+        slidingWindowSize: 20 # Building Resilient Distributed Systems 권장: 20 (과제 권장값)
         minimumNumberOfCalls: 5
         waitDurationInOpenState: 10s
         failureRateThreshold: 50
         slowCallRateThreshold: 50 # 느린 호출 비율 임계값 (50% 이상 느리면 Open) - Release It! 권장: 50~70%
+        slowCallDurationThreshold: 2s # 느린 호출 기준 시간 (2초 이상) - Building Resilient Distributed Systems 권장: 2s
         # 실패율 임계값 50%: 최소 5번 호출 중 3번 이상 실패 시 Open 상태로 전환
         # 이 설정은 Retry와 함께 사용될 때 적절한 균형을 제공합니다:
         # - 너무 낮으면 (예: 30%): 정상적인 일시적 오류에도 Fallback이 과도하게 호출됨
@@ -85,11 +86,12 @@ resilience4j:
         # Release It! 권장: "실패가 아니더라도 너무 느린 응답"도 장애의 징후이므로 감시
       paymentGatewaySchedulerClient:
         baseConfig: default
-        slidingWindowSize: 10
+        slidingWindowSize: 20 # Building Resilient Distributed Systems 권장: 20 (과제 권장값)
         minimumNumberOfCalls: 5
         waitDurationInOpenState: 10s
         failureRateThreshold: 50
         slowCallRateThreshold: 50 # 느린 호출 비율 임계값 (50% 이상 느리면 Open) - Release It! 권장: 50~70%
+        slowCallDurationThreshold: 2s # 느린 호출 기준 시간 (2초 이상) - Building Resilient Distributed Systems 권장: 2s
   retry:
     configs:
       default:
