--- a/apps/commerce-api/src/main/resources/application.yml
+++ b/apps/commerce-api/src/main/resources/application.yml
@@ -63,7 +63,7 @@ resilience4j:
         waitDurationInOpenState: 10s # Open 상태 유지 시간 (10초 후 Half-Open으로 전환)
         failureRateThreshold: 50 # 실패율 임계값 (50% 이상 실패 시 Open)
         slowCallRateThreshold: 50 # 느린 호출 비율 임계값 (50% 이상 느리면 Open) - Release It! 권장: 50~70%
-        slowCallDurationThreshold: 2s # 느린 호출 기준 시간 (2초 이상) - Building Resilient Distributed Systems 권장: 2s
+        slowCallDurationThreshold: ${RESILIENCE4J_CIRCUITBREAKER_SCHEDULER_SLOW_CALL_DURATION_THRESHOLD:2s} # 느린 호출 기준 시간 (2초 이상) - Building Resilient Distributed Systems 권장: 2s (환경 변수로 동적 설정 가능)
         recordExceptions:
           - feign.FeignException
           - java.net.SocketTimeoutException
@@ -76,7 +76,7 @@ resilience4j:
         waitDurationInOpenState: 10s
         failureRateThreshold: 50
         slowCallRateThreshold: 50 # 느린 호출 비율 임계값 (50% 이상 느리면 Open) - Release It! 권장: 50~70%
-        slowCallDurationThreshold: 2s # 느린 호출 기준 시간 (2초 이상) - Building Resilient Distributed Systems 권장: 2s
+        slowCallDurationThreshold: ${RESILIENCE4J_CIRCUITBREAKER_PAYMENT_GATEWAY_SLOW_CALL_DURATION_THRESHOLD:2s} # 느린 호출 기준 시간 (2초 이상) - Building Resilient Distributed Systems 권장: 2s (환경 변수로 동적 설정 가능)
         # 실패율 임계값 50%: 최소 5번 호출 중 3번 이상 실패 시 Open 상태로 전환
         # 이 설정은 Retry와 함께 사용될 때 적절한 균형을 제공합니다:
         # - 너무 낮으면 (예: 30%): 정상적인 일시적 오류에도 Fallback이 과도하게 호출됨
@@ -91,7 +91,7 @@ resilience4j:
         waitDurationInOpenState: 10s
         failureRateThreshold: 50
         slowCallRateThreshold: 50 # 느린 호출 비율 임계값 (50% 이상 느리면 Open) - Release It! 권장: 50~70%
-        slowCallDurationThreshold: 2s # 느린 호출 기준 시간 (2초 이상) - Building Resilient Distributed Systems 권장: 2s
+        slowCallDurationThreshold: ${RESILIENCE4J_CIRCUITBREAKER_SCHEDULER_SLOW_CALL_DURATION_THRESHOLD:2s} # 느린 호출 기준 시간 (2초 이상) - Building Resilient Distributed Systems 권장: 2s (환경 변수로 동적 설정 가능)
   retry:
     configs:
       default:
