--- a/apps/commerce-api/src/main/resources/application.yml
+++ b/apps/commerce-api/src/main/resources/application.yml
@@ -47,9 +47,7 @@ feign:
         readTimeout: 6000 # 읽기 타임아웃 (6초) - PG 처리 지연 1s~5s 고려
         loggerLevel: full # 로깅 레벨 (디버깅용)
   circuitbreaker:
-    enabled: true # CircuitBreaker 활성화
-    group:
-      enabled: true # Circuit Breaker 그룹 활성화
+    enabled: false # FeignClient 자동 Circuit Breaker 비활성화 (어댑터 레벨에서 pgCircuit 사용)
   resilience4j:
     enabled: true # Resilience4j 활성화
 
@@ -76,29 +74,6 @@ resilience4j:
           - java.util.concurrent.TimeoutException
         ignoreExceptions: [] # 모든 예외를 기록 (무시할 예외 없음)
     instances:
-      paymentGatewayClient:
-        baseConfig: default
-        slidingWindowSize: 20 # Building Resilient Distributed Systems 권장: 20 (과제 권장값)
-        minimumNumberOfCalls: 1 # 첫 호출부터 통계 수집하여 메트릭 즉시 노출
-        waitDurationInOpenState: 10s
-        failureRateThreshold: 50
-        slowCallRateThreshold: 50 # 느린 호출 비율 임계값 (50% 이상 느리면 Open) - Release It! 권장: 50~70%
-        slowCallDurationThreshold: ${RESILIENCE4J_CIRCUITBREAKER_PAYMENT_GATEWAY_SLOW_CALL_DURATION_THRESHOLD:2s} # 느린 호출 기준 시간 (2초 이상) - Building Resilient Distributed Systems 권장: 2s (환경 변수로 동적 설정 가능)
-        # 실패율 임계값 50%: 호출 중 50% 이상 실패 시 Open 상태로 전환
-        # 이 설정은 Retry와 함께 사용될 때 적절한 균형을 제공합니다:
-        # - 너무 낮으면 (예: 30%): 정상적인 일시적 오류에도 Fallback이 과도하게 호출됨
-        # - 너무 높으면 (예: 70%): 실제 장애 상황에서 Fallback이 늦게 활성화됨
-        # 50%는 일반적인 마이크로서비스 환경에서 권장되는 값입니다
-        # 느린 호출 비율 50%: 호출 중 50% 이상이 느리면 Open 상태로 전환
-        # Release It! 권장: "실패가 아니더라도 너무 느린 응답"도 장애의 징후이므로 감시
-      paymentGatewaySchedulerClient:
-        baseConfig: default
-        slidingWindowSize: 20 # Building Resilient Distributed Systems 권장: 20 (과제 권장값)
-        minimumNumberOfCalls: 1 # 첫 호출부터 통계 수집하여 메트릭 즉시 노출
-        waitDurationInOpenState: 10s
-        failureRateThreshold: 50
-        slowCallRateThreshold: 50 # 느린 호출 비율 임계값 (50% 이상 느리면 Open) - Release It! 권장: 50~70%
-        slowCallDurationThreshold: ${RESILIENCE4J_CIRCUITBREAKER_SCHEDULER_SLOW_CALL_DURATION_THRESHOLD:2s} # 느린 호출 기준 시간 (2초 이상) - Building Resilient Distributed Systems 권장: 2s (환경 변수로 동적 설정 가능)
       pgCircuit:
         baseConfig: default
         slidingWindowSize: 20 # Building Resilient Distributed Systems 권장: 20 (과제 권장값)
@@ -125,17 +100,6 @@ resilience4j:
           - feign.FeignException$Unauthorized    # 401 에러
           - feign.FeignException$Forbidden       # 403 에러
           - feign.FeignException$NotFound         # 404 에러
-    instances:
-      # 결제 요청 API: 유저 요청 경로에서 사용되므로 Retry 비활성화 (빠른 실패)
-      # 실패 시 주문은 PENDING 상태로 유지되어 스케줄러에서 복구됨
-      paymentGatewayClient:
-        baseConfig: default
-        maxAttempts: 1 # Retry 없음 (초기 시도만) - 유저 요청 스레드 점유 최소화
-      # 스케줄러 전용 클라이언트: 비동기/배치 기반으로 Retry 적용 (Exponential Backoff)
-      # Java Config(Resilience4jRetryConfig)에서 Exponential Backoff 설정이 적용됩니다.
-      paymentGatewaySchedulerClient:
-        baseConfig: default
-        maxAttempts: 3 # Retry 적용 (Exponential Backoff: 500ms → 1000ms)
   timelimiter:
     configs:
       default:
