--- a/modules/kafka/src/main/resources/kafka.yml
+++ b/modules/kafka/src/main/resources/kafka.yml
@@ -15,6 +15,10 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       retries: 3
+      properties:
+        acks: all                    # 모든 리플리카에 쓰기 확인 (At Least Once 보장)
+        enable.idempotence: true     # 중복 방지 (At Least Once 보장)
+        max.in.flight.requests.per.connection: 5  # idempotence=true일 때 필수
     consumer:
       group-id: loopers-default-consumer
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
