chore: kafka 토픽 자동 생성 설정 추가

--- a/modules/kafka/src/main/resources/kafka.yml
+++ b/modules/kafka/src/main/resources/kafka.yml
@@ -37,7 +37,7 @@ spring:
     admin:
       properties:
         bootstrap.servers: kafka:9092
-
+      auto-create: true
 ---
 spring.config.activate.on-profile: dev
 
