--- a/modules/kafka/src/main/resources/kafka.yml
+++ b/modules/kafka/src/main/resources/kafka.yml
@@ -33,10 +33,12 @@ spring.config.activate.on-profile: local, test
 
 spring:
   kafka:
-    bootstrap-servers: localhost:19092
+    # Testcontainers를 사용하는 경우 BOOTSTRAP_SERVERS가 자동으로 설정됨
+    # 로컬 개발 환경에서는 localhost:19092 사용
+    bootstrap-servers: ${BOOTSTRAP_SERVERS:localhost:19092}
     admin:
       properties:
-        bootstrap.servers: kafka:9092
+        bootstrap.servers: ${BOOTSTRAP_SERVERS:localhost:19092}
       auto-create: true
 ---
 spring.config.activate.on-profile: dev
