--- a/modules/kafka/src/main/resources/kafka.yml
+++ b/modules/kafka/src/main/resources/kafka.yml
@@ -15,6 +15,10 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       retries: 3
+      properties:
+        acks: all                    # 모든 리플리카에 쓰기 확인 (At Least Once 보장)
+        enable.idempotence: true     # 중복 방지 (At Least Once 보장)
+        max.in.flight.requests.per.connection: 5  # idempotence=true일 때 필수
     consumer:
       group-id: loopers-default-consumer
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
@@ -29,11 +33,13 @@ spring.config.activate.on-profile: local, test
 
 spring:
   kafka:
-    bootstrap-servers: localhost:19092
+    # Testcontainers를 사용하는 경우 BOOTSTRAP_SERVERS가 자동으로 설정됨
+    # 로컬 개발 환경에서는 localhost:19092 사용
+    bootstrap-servers: ${BOOTSTRAP_SERVERS:localhost:19092}
     admin:
       properties:
-        bootstrap.servers: kafka:9092
-
+        bootstrap.servers: ${BOOTSTRAP_SERVERS:localhost:19092}
+      auto-create: true
 ---
 spring.config.activate.on-profile: dev
 
